fixed footer height to resolve layout shift

--- a/src/components/Footer/Footer.module.css
+++ b/src/components/Footer/Footer.module.css
@@ -10,7 +10,7 @@
   flex-direction: column;
   align-items: center;
   justify-content: flex-start;
-  min-height: 80px;
+  height: 160px;
   position: relative;
   bottom: 0;
 }
@@ -109,7 +109,7 @@
     align-items: center;
   }
 .footer {
-  min-height: 100px;
+  height: 230px;
   bottom: 0;
 }
 
